# GLFW-OpenGL-Base

./: .gitignore  .gitmodules  CMakeLists.txt  GLFW OpenGL Base.sln  LICENSE  README.md  build.sh  doxygen.cfg  main.md
CMake/: DownloadAndExtractFile.cmake  FindBass.cmake
GLFW OpenGL Base/: Common.cpp  Common.hpp  GLFW OpenGL Base.vcxproj  GLFW OpenGL Base.vcxproj.filters  Game.c  Game.cpp  Game.h  Game.hpp  GameStateManager.cpp  GameStateManager.hpp  Main.c  Main.cpp  imgui.ini
GLFW OpenGL Base/general/: Camera.c  Camera.cpp  Camera.h  Camera.hpp  CubeMap.cpp  CubeMap.hpp  Cubemap.c  Cubemap.h  GameObject.c  GameObject.cpp  GameObject.h  GameObject.hpp  Mesh.c  Mesh.cpp  Mesh.h  Mesh.hpp  Model.c  Model.cpp  Model.hpp  Music.c  Music.cpp  Music.h  Music.hpp  Settings.c  Settings.h  Settings.hpp  Shader.c  Shader.cpp  Shader.h  Shader.hpp  SharedData.hpp  Texture.c  Texture.cpp  Texture.h  Texture.hpp  Vertex.hpp
GLFW OpenGL Base/imgui/: font_kenney.hpp  fonts.hpp  imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl.cpp  imgui_impl.h
GLFW OpenGL Base/res/shaders/: example.frag  skybox.frag
GLFW OpenGL Base/states/: ExampleState.cpp  ExampleState.hpp  GameState.cpp  GameState.h  GameState.hpp  LoadState.cpp  State1.c
GLFW OpenGL Base/threads/: Backend.cpp  Backend.hpp  Frontend.cpp  Frontend.hpp
GLFW OpenGL Base/utils/: SwissArmyKnife.c  SwissArmyKnife.h  Typedefs.h  Vector.c  Vector.h  glad.c
doxygen/html/: _camera_8c.html  _camera_8h_source.html  _cubemap_8c.html  _cubemap_8h_source.html  _game_8c.html  _game_8h_source.html  _game_object_8c.html  _game_object_8h_source.html  _game_state_8c.html  _game_state_8h_source.html  _mesh_8c.html  _mesh_8h_source.html  _model_8c.html  _model_8h_source.html  _music_8c.html  _music_8h_source.html  _settings_8c.html  _settings_8h_source.html  _shader_8c.html  _shader_8h_source.html  _state1_8c.html  _state1_8h_source.html  _swiss_army_knife_8c.html  _swiss_army_knife_8h_source.html  _texture_8c.html  _texture_8h_source.html  _typedefs_8h_source.html  _vector_8c.html  _vector_8h_source.html  _vector_g_l_8h_source.html  _vertex_8h_source.html  annotated.html  classes.html  dir_0ef45b72fea5c9869a86802e135ecac6.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_61a31ff85c95043c98241b02dc2a1804.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  (+33 more)
doxygen/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  (+3 more)
doxygen/latex/: _camera_8c.tex  _cubemap_8c.tex  _game_8c.tex  _game_object_8c.tex  _game_state_8c.tex  _mesh_8c.tex  _model_8c.tex  _music_8c.tex  _settings_8c.tex  _shader_8c.tex  _state1_8c.tex  _swiss_army_knife_8c.tex  _texture_8c.tex  _vector_8c.tex  annotated.tex  files.tex  index.tex  refman.tex  struct_camera.tex  struct_cube_map.tex  struct_game_object.tex  struct_game_state.tex  struct_game_state_params.tex  struct_mesh.tex  struct_model.tex  struct_music.tex  struct_settings.tex  struct_shader.tex  struct_state1.tex  struct_texture.tex  struct_vector.tex  struct_vertex.tex
lib/bass/3dtest/: 3dtest.c
lib/bass/modtest/: modtest.c
lib/bass/netradio/: netradio.c
lib/bass/rectest/: rectest.c
lib/bass/speakers/: speakers.c
lib/glad/: README.md  glad.h
src/: Common.cpp  Common.hpp  GLFW OpenGL Base.vcxproj  GLFW OpenGL Base.vcxproj.filters  Game.c  Game.cpp  Game.h  Game.hpp  Main.cpp  glad.c  imgui.ini
src/game_objects/: Camera.cpp  Camera.hpp  CubeMap.cpp  CubeMap.hpp  GLObject.hpp  GameObject.cpp  GameObject.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Music.cpp  Music.hpp  Settings.hpp  Shader.cpp  Shader.hpp  SharedData.hpp  Texture.cpp  Texture.hpp
src/general/: Camera.c  Camera.h  Cubemap.c  Cubemap.h  GameObject.c  GameObject.h  Mesh.c  Mesh.h  Model.c  Model.h  Music.c  Music.h  Settings.c  Settings.h  Shader.c  Shader.h  Texture.c  Texture.h  Vertex.h
src/imgui/: font_material_design.hpp  fonts.hpp  imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl.cpp  imgui_impl.h  imgui_widgets.cpp
src/states/: ExampleState.cpp  ExampleState.hpp  GameState.c  GameState.cpp  GameState.h  GameState.hpp  LoadState.cpp  LoadState.hpp  State1.c  State1.h
src/utils/: Handle.hpp  SwissArmyKnife.c  SwissArmyKnife.h  Typedefs.h  Vector.c  Vector.h  VectorGL.c  VectorGL.h  glad.c
(+8 files in other folders)
